tests/macros/list/filter.stderr
error: option `filter` does not exist for kind `list`
 --> $DIR/filter.rs:2:44
  |
2 |     let q = inquisition::questions![list { filter: todo!() }];
  |                                            ^^^^^^
