tests/macros/list/filter.rs
fn main() {
    let q = inquisition::questions![list { filter: todo!() }];
}
